--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,18 +1,13 @@
-
-
-*, *:before, *:after {
-  box-sizing: border-box; 
-}
-body{
-  background: url('/assets/wood_bg.jpg');
-}
+*, *:before, *:after { box-sizing: border-box; }
+body{ background: url('/assets/wood_bg.jpg'); }
 
 header{
   background: rgba(255,255,255,.95);
   border-top: white 5px solid;
   border-bottom: white 5px solid;
+  margin-bottom: 20px;
   box-shadow: 0 0 20px black;
-  position: fixed;
+  position: relative;
   z-index: 99999;
   width: 100%;
   h1{
@@ -20,7 +15,6 @@ header{
     margin: 0 0 5px 0;
     padding: 5px 0 5px 20px;
     text-shadow: 0 0 1px black;
-    color: #555;
   }
   ul{
     display: inline-block;
@@ -33,29 +27,14 @@ header{
   }
 }
 
-
-
 #myul{
   display: block;
   list-style: none;
   margin: 0 auto;
   padding: 0;
-  width: 480px;
-  background: white;
   li{
     display: inline-box;
     float: left;
-    &:nth-child(5n+1),
-    &:nth-child(5n+2){
-      height:240px;
-      width: 240px;
-    }
-    &:nth-child(5n+3),
-    &:nth-child(5n+4),
-    &:nth-child(5n+5){
-      height: 160px;
-      width: 160px;
-    }
     img{
       transition: height .5s ease-in-out, 
                    width .5s ease-in-out, 
@@ -69,13 +48,120 @@ header{
       z-index: 100;
       opacity: .05;
       &:hover{
-        height: 104%;
-        width: 104%;
-        left: -2%;
-        top: -2%;
+        height: 102%;
+        width: 102%;
+        left: -1%;
+        top: -1%;
         box-shadow: 0 0  45px 0px rgba(0,0,0,.8);
         opacity: 1;
         transition: opacity .2s;
+      }
+    }
+  }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 320px) {
+  #myul{
+    width: 320px;
+    li{
+        height: 160px;
+        width: 160px;
+    }
+  }
+}
+
+@media only screen 
+and (min-width : 480px) {
+  #myul{
+    width: 480px;
+    li{
+      display: inline-box;
+      float: left;
+      &:nth-child(5n+1),
+      &:nth-child(5n+2){
+        height:240px;
+        width: 240px;
+      }
+      &:nth-child(5n+3),
+      &:nth-child(5n+4),
+      &:nth-child(5n+5){
+        height: 160px;
+        width: 160px;
+      }
+    }
+  }
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 768px) {
+  #myul{
+    width: 720px;
+    li{
+      display: inline-box;
+      float: left;
+      &:nth-child(7n+1),
+      &:nth-child(7n+2),
+      &:nth-child(7n+3){
+        height:240px;
+        width: 240px;
+      }
+      &:nth-child(7n+4),
+      &:nth-child(7n+5),
+      &:nth-child(7n+6),
+      &:nth-child(7n+7){
+        height: 180px;
+        width: 180px;
+      }
+    }
+  }
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+  #myul{
+    width: 960px;
+    li{
+      display: inline-box;
+      float: left;
+      &:nth-child(5n+1),
+      &:nth-child(5n+2){
+        height:480px;
+        width: 480px;
+      }
+      &:nth-child(5n+3),
+      &:nth-child(5n+4),
+      &:nth-child(5n+5){
+        height: 320px;
+        width: 320px;
+      }
+    }
+  }
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+  #myul{
+    width: 1200px;
+    li{
+      display: inline-box;
+      float: left;
+      &:nth-child(5n+1),
+      &:nth-child(5n+2),
+      &:nth-child(5n+3){
+        height:400px;
+        width: 400px;
+      }
+      &:nth-child(5n+4),
+      &:nth-child(5n+5),
+      &:nth-child(5n+6),
+      &:nth-child(5n+7){
+        height: 300px;
+        width: 300px;
       }
     }
   }
