--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,5 +1,5 @@
 *, *:before, *:after { box-sizing: border-box; }
-body{ background: url('/assets/wood_bg.jpg'); }
+body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
 
 header{
   background: rgba(255,255,255,.95);
