--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -2,7 +2,7 @@
 body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
 
 header{
-  background: rgba(255,255,255,.95);
+  background: rgba(255,255,255,.9);
   border-top: white 5px solid;
   border-bottom: white 5px solid;
   margin-bottom: 20px;
@@ -36,22 +36,22 @@ header{
     display: inline-box;
     float: left;
     img{
-      transition: height .5s ease-in-out, 
-                   width .5s ease-in-out, 
-                    left .5s ease-in-out, 
-                     top .5s ease-in-out, 
-               box-shadow 1s ease-out, 
-                  opacity 5s;
+      transition: height .125s ease-in-out, 
+                   width .125s ease-in-out, 
+                    left .125s ease-in-out, 
+                     top .125s ease-in-out, 
+                box-shadow .5s ease-out, 
+                    opacity 7s;
       height: 100%;
       width: 100%;
       position: relative;
       z-index: 100;
-      opacity: .05;
+      opacity: .75;
       &:hover{
-        height: 102%;
-        width: 102%;
-        left: -1%;
-        top: -1%;
+        // height: 101%;
+        // width: 101%;
+        // left: -.5%;
+        // top: -.5%;
         box-shadow: 0 0  45px 0px rgba(0,0,0,.8);
         opacity: 1;
         transition: opacity .2s;
@@ -127,16 +127,20 @@ and (min-width : 1224px) {
     li{
       display: inline-box;
       float: left;
-      &:nth-child(5n+1),
-      &:nth-child(5n+2){
-        height:480px;
-        width: 480px;
+      &:nth-child(9n+1),
+      &:nth-child(9n+2),
+      &:nth-child(9n+3),
+      &:nth-child(9n+4){
+        height:240px;
+        width: 240px;
       }
-      &:nth-child(5n+3),
-      &:nth-child(5n+4),
-      &:nth-child(5n+5){
-        height: 320px;
-        width: 320px;
+      &:nth-child(9n+5),
+      &:nth-child(9n+6),
+      &:nth-child(9n+7),
+      &:nth-child(9n+8),
+      &:nth-child(9n+9){
+        height: 192px;
+        width: 192px;
       }
     }
   }
@@ -150,18 +154,22 @@ and (min-width : 1824px) {
     li{
       display: inline-box;
       float: left;
-      &:nth-child(5n+1),
-      &:nth-child(5n+2),
-      &:nth-child(5n+3){
-        height:400px;
-        width: 400px;
+      &:nth-child(11n+1),
+      &:nth-child(11n+2),
+      &:nth-child(11n+3),
+      &:nth-child(11n+4),
+      &:nth-child(11n+5){
+        height:240px;
+        width: 240px;
       }
-      &:nth-child(5n+4),
-      &:nth-child(5n+5),
-      &:nth-child(5n+6),
-      &:nth-child(5n+7){
-        height: 300px;
-        width: 300px;
+      &:nth-child(11n+6),
+      &:nth-child(11n+7),
+      &:nth-child(11n+8),
+      &:nth-child(11n+9),
+      &:nth-child(11n+10),
+      &:nth-child(11n+11){
+        height: 200px;
+        width: 200px;
       }
     }
   }
