--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -27,11 +27,12 @@ header{
   }
 }
 
-#myul{
+.no-touch #myul{
   display: block;
   list-style: none;
   margin: 0 auto;
   padding: 0;
+  transition: width .25s ease-in;
   li{
     display: inline-box;
     float: left;
@@ -41,7 +42,7 @@ header{
                     left .125s ease-in-out, 
                      top .125s ease-in-out, 
                 box-shadow .5s ease-out, 
-                    opacity 7s;
+                    opacity 20s;
       height: 100%;
       width: 100%;
       position: relative;
