--- a/app/views/static/home.haml
+++ b/app/views/static/home.haml
@@ -1,14 +1,20 @@
 %ul#myul
   -(1..25).each do |f|
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_jerkfaces_pt2.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/06/IMG_1605.jpg' }
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_SummerOfTheJerk.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/05/IMG_1497.jpg' }
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_JerkKitty.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/05/IMG_1402.jpg' }
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_phone_bone.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/03/IMG_1299.jpg' }
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_MickeyNYC.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/03/IMG_1260.jpg' }
     %li
-      %img{ src: 'https://jerktest.s3.amazonaws.com/uploads/production/artwork/thumb_year_of_the_jerk.jpg' }
+      %a{ href: '#' }
+        %img{ src: 'http://deps1.com/files/2013/03/IMG_1246.jpg' }
