--- a/app/views/artworks/index.html.haml
+++ b/app/views/artworks/index.html.haml
@@ -4,19 +4,22 @@
   %table
     %thead
       %tr
+        %th
         %th Title
         %th Category
-        %th
-        %th
+        %th Sold
         %th
 
     %tbody
       - @artworks.each do |artwork|
         %tr
+          %td= image_tag artwork.image_url(:icon).to_s
           %td= artwork.title
-          %td= artwork.category
-          %td= link_to 'Show', artwork
-          %td= link_to 'Edit', edit_artwork_path(artwork)
-          %td= link_to 'Destroy', artwork, method: :delete, data: { confirm: 'Are you sure?' }
+          %td= artwork.category.name
+          %td= artwork.sold
+          %td
+            = link_to 'Show', artwork
+            = link_to 'Edit', edit_artwork_path(artwork)
+            = link_to 'Destroy', artwork, method: :delete, data: { confirm: 'Are you sure?' }
 
   = link_to 'New Artwork', new_artwork_path
