--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,20 +1,1 @@
-%ul#images
-  -(1..25).each do |f|
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/06/IMG_1605.jpg' }
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/05/IMG_1497.jpg' }
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/05/IMG_1402.jpg' }
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/03/IMG_1299.jpg' }
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/03/IMG_1260.jpg' }
-    %li
-      %a{ href: '#' }
-        %img{ src: 'http://deps1.com/files/2013/03/IMG_1246.jpg' }
+%h1 Static#home
