--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -6,9 +6,6 @@
       %tr
         %th Name
         %th Hidden
-        %th Position
-        %th
-        %th
         %th
 
     %tbody
@@ -16,9 +13,9 @@
         %tr
           %td= category.name
           %td= category.hidden
-          %td= category.position
-          %td= link_to 'Show', category
-          %td= link_to 'Edit', edit_category_path(category)
-          %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+          %td.actions
+            = link_to 'Show', category
+            = link_to 'Edit', edit_category_path(category)
+            = link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
   = link_to 'New Category', new_category_path
