--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,31 +1,50 @@
 *, *:before, *:after { box-sizing: border-box; }
-body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
 
-header{
-  background: url('http://deps1.com/files/2013/02/cropped-IMG_0940.jpg');
-  border-top: white 5px solid;
-  border-bottom: white 5px solid;
-  margin-bottom: 20px;
-  box-shadow: 0 0 20px black;
-  width: 100%;
-  color: #fff;
+body{ background: url('/assets/wood_bg.jpg'); }
+
+#main-header{
+  padding: 1em 2em 0em;
+  margin-bottom: 1em;
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,.75);
   h1{
-    background: rgba(200,200,200,.35);
-    margin: 0 0 5px 0;
-    padding: 5px 0 5px 20px;
-    text-shadow: 0 0 1px black;
+    margin: 0;
+    padding: 0;
+    height: 72px;
+    background: url('/assets/header.png') .25em 0;
+    box-shadow: 0 0 2px rgba(0,0,0,.5);
+    text-indent: -9999px;
+    animation: 3s slideBg infinite linear;
+    @keyframes slideBg {
+      0% {
+          background-position: 0 0;
+      }
+      100% {
+          background-position: 1016px 0; /* 200px = width of background image */
+      }
+    }
   }
-  ul{
-    display: inline-block;
-    margin: 0 auto;
-    li{
-      display: inline-block;
-      margin: 0 10px 0 0;
+  nav{
+    padding: .25em .5em .25em;
+    ul{
+      margin: 0;
       padding: 0;
-      a{
-        color: #fff;
-        font-weight: bold;
-        text-shadow: 0 0 5px black;
+      list-style: none;
+      li{
+        display: inline-block;
+          margin-right: .5em;
+        a{
+          color: #333;
+          &:hover{
+            color: #000;
+          }
+        }
+      }
+      &:before{
+        content: "DEPS ";
+        font-size: 1.5em;
+        color: #111;
+        margin-right: .5em;
       }
     }
   }
