--- a/app/assets/stylesheets/type.css.scss
+++ b/app/assets/stylesheets/type.css.scss
@@ -1,4 +1,6 @@
-body{ font-family: 'Open Sans Condensed', sans-serif; }
+body{
+  font-family: 'Oxygen', sans-serif;
+}
 a{
   text-decoration: none;
   &:hover{
