fixed image links

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,5 +1,4 @@
 %ul#images
   - @artworks.each do |artwork|
     %li
-      %a{ href: artwork.image_url(:large).to_s, data: { sold: artwork.sold, title: artwork.title } }
-        =image_tag artwork.image_url(:thumb).to_s, alt: artwork.title
+      = link_to image_tag(artwork.image_url(:thumb).to_s, alt: artwork.title), artwork, data: { sold: artwork.sold, title: artwork.title }
