remove header.js

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -2,6 +2,7 @@ $admin: #000;
 
 nav.admin{
   position: fixed;
+  z-index: 99999;
   bottom: 0;
   background: black;
   box-shadow: 0 0 50px 1px black;
