--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
       %h1 Deps
       %nav
         %ul
-          %li= link_to 'home', blogs_path
+          %li= link_to 'blog', blogs_path
           = render '/categories/listcats'
           %li= link_to 'contact', contact_path
     #main-content
