--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -3,12 +3,12 @@
 body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
 
 #main-header{
-  padding: 1em 2em 0em;
+  padding-top: .5em;
   margin-bottom: 1em;
   background: white;
   box-shadow: 0 0 20px rgba(0,0,0,.75);
   h1{
-    margin: 0;
+    margin: 0 2em 0;
     padding: 0;
     height: 72px;
     background: url('https://s3.amazonaws.com/deps1/static/header.png') .25em 0;
@@ -17,9 +17,10 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   }
   nav{
     padding: .25em .5em .25em;
+    background: #fefefe;
     ul{
       margin: 0;
-      padding: 0;
+      padding: 0 0 0 4.75em;
       list-style: none;
       li{
         display: inline-block;
