permissions for each page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,3 +23,4 @@
         %li= link_to 'New Blog', new_blog_path
         %li= link_to 'Categories', categories_path
         %li= link_to 'Artwork', artworks_path
+        %li= link_to 'Logout', logout_path, method: :delete 
