blog admin links

--- a/app/views/blogs/_blog.html.haml
+++ b/app/views/blogs/_blog.html.haml
@@ -6,7 +6,7 @@
   .post= raw(blog.post)
   %footer
     .fb-like{ data: { href: blog_url(blog.id), send: 'false', layout: 'button_count', font: 'lucida grande', colorscheme: 'dark' } }
-    /- if session[:user_id]
-    %ul#admin-blog
-      %li= link_to 'Edit', edit_blog_path(blog)
-      %li= link_to 'Destroy', blog, method: :delete, class: 'delete_btn', data: { confirm: 'Are you sure?' }
+    - if session[:user_id]
+      %ul#admin-blog
+        %li= link_to 'Edit', edit_blog_path(blog)
+        %li= link_to 'Destroy', blog, method: :delete, class: 'delete_btn', data: { confirm: 'Are you sure?' }
