--- a/app/views/artworks/_form.html.haml
+++ b/app/views/artworks/_form.html.haml
@@ -12,12 +12,28 @@
     = f.collection_select(:category_id, Category.all, :id, :name, { selected: params[:category_id] })
 
   .field
+    = f.label :sold
+    = f.check_box :sold
+
+  .field
     = f.label :title
     = f.text_field :title
 
   .field
-    = f.label :sold
-    = f.check_box :sold
+    = f.label :medium
+    = f.text_field :medium,  value: 'Acrylic on Canvas', id: 'mediumtxt', data: {auto_complete_source: @media }
+  
+  .field
+    = f.label :width
+    = f.number_field :width
+  
+  .field
+    = f.label :length
+    = f.number_field :length
+  
+  .field
+    = f.label :year
+    = f.select :year, (2000..Time.now.year).to_a.reverse, { prompt: false }
 
   .field
     = f.label :image
