--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,11 +1,12 @@
-%p{ :id => "notice"}= notice
+%section.admin
+  %p{ :id => "notice"}= notice
 
-%p
-  %b Name:
-  = @user.name
+  %p
+    %b Name:
+    = @user.name
 
-%p
-  %b Password digest:
-  = @user.password_digest
+  %p
+    %b Password digest:
+    = @user.password_digest
 
-= link_to 'Edit', edit_user_path(@user)
+  = link_to 'Edit', edit_user_path(@user)
