--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -10,10 +10,11 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   h1{
     margin: 0 2em 0;
     padding: 0;
-    height: 72px;
-    background: url('https://s3.amazonaws.com/deps1/static/header.png') .25em 0;
+    height: 73px;
+    background: url('https://s3.amazonaws.com/deps1/static/banner.jpg') .25em 0;
     box-shadow: 0 0 2px rgba(0,0,0,.5);
     text-indent: -9999px;
+    box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.75);
   }
   nav{
     padding: .25em .5em .25em;
