--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,12 +5,12 @@
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-    %link{ href: 'http://fonts.googleapis.com/css?family=Oxygen:400,700,300', rel: 'stylesheet', type: 'text/css' }
+    %link{ href: 'https://fonts.googleapis.com/css?family=Oxygen:400,700,300', rel: 'stylesheet', type: 'text/css' }
 
   %body
     %header#main-header
       %h1 Deps
-      %nav
+      %nav.pinned
         %ul
           %li= link_to 'blog', blogs_path
           = render '/categories/listcats'
@@ -24,3 +24,6 @@
         %li= link_to 'Categories', categories_path
         %li= link_to 'Artwork', artworks_path
         %li= link_to 'Logout', logout_path, method: :delete 
+
+  :javascript
+    $('nav.pinned').pin({  minWidth: 480 })
