--- a/app/assets/stylesheets/type.css.scss
+++ b/app/assets/stylesheets/type.css.scss
@@ -1,11 +1,17 @@
 body{
   font-family: 'Oxygen', sans-serif;
+  font-weight: 300;
 }
 p{
   font-size: 1em;
   line-height: 1.5em;
   margin-top: 0;
   margin-bottom: 1.5em;
+}
+
+h1,h2,h3,h4,h5,h6{
+  margin-top: 0;
+  font-weight: 400;
 }
 h1 {
   font-size: 2.369em;
@@ -16,31 +22,26 @@ h1 {
 h2 {
   font-size: 1.777em;
   line-height: 0.844119302194713em;
-  margin-top: 0;
   margin-bottom: 0.84411930219471em;
 }
 h3 {
   font-size: 1.333em;
   line-height: 1.12528132033008em;
-  margin-top: 0;
   margin-bottom: 1.12528132033008em;
 }
 h4 {
   font-size: 1em;
   line-height: 1.5em;
-  margin-top: 0;
   margin-bottom: 1.5em;
 }
 h5 {
   font-size: 0.75em;
   line-height: 2em;
-  margin-top: 0;
   margin-bottom: 2em;
 }
 h6 {
   font-size: 0.563em;
   line-height: 2.66429840142096em;
-  margin-top: 0;
   margin-bottom: 2.66429840142096em;
 }
 ol, ul {
