--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -6,7 +6,6 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   padding-top: .5em;
   margin-bottom: 1em;
   background: #fff;
-  box-shadow: 0 0 20px rgba(0,0,0,.75);
   h1{
     position: relative;
     z-index: 999999;
@@ -21,7 +20,8 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
   nav{
     padding: .25em .5em .25em;
     background: #fff;
-    z-index: 999999;
+    z-index: 999998;
+    box-shadow: 0px 4px 4px rgba(0,0,0,.125);
     ul{
       margin: 0;
       padding: 0 0 0 4.75em;
