--- a/app/views/artworks/index.html.haml
+++ b/app/views/artworks/index.html.haml
@@ -1,6 +1,9 @@
 %section.admin
   %h1 Listing artworks
-
+ 
+  - if notice
+    %p#notice= notice
+  
   %table
     %thead
       %tr
@@ -8,7 +11,6 @@
         %th Title
         %th Category
         %th
-
     %tbody.sorts{ data: { update_url: sort_artworks_url } }
       - @artworks.each do |artwork|
         %tr
@@ -22,4 +24,5 @@
             = link_to 'Edit', edit_artwork_path(artwork)
             = link_to 'Destroy', artwork, method: :delete, data: { confirm: 'Are you sure?' }
 
-  = link_to 'New Artwork', new_artwork_path
+  .actions
+    = link_to 'New Artwork', new_artwork_path, class: 'btn'
