--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,14 +1,16 @@
 %section.admin
   %h1 Listing categories
 
+  - if notice
+    %p#notice= notice
+
   %table
     %thead
       %tr
         %th Name
         %th Hidden
         %th
-
-    %tbody
+    %tbody.sorts
       - @categories.each do |category|
         %tr
           %td= category.name
@@ -18,4 +20,5 @@
             = link_to 'Edit', edit_category_path(category)
             = link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
 
-  = link_to 'New Category', new_category_path
+  .actions
+    = link_to 'New Category', new_category_path, class: 'btn'
