--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,4 +9,4 @@
     %b Password digest:
     = @user.password_digest
 
-  = link_to 'Edit', edit_user_path(@user)
+  = link_to 'Edit', edit_user_path(@user), class: 'btn'
