--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -5,9 +5,9 @@ form{
 .field{
   margin-bottom: 1em;
 }
-.actions{
+div.actions{
   text-align: center;
-  background: #ddd;
+  background: #ccc;
   padding: 1em;
   margin:0 -.5em -1.5em;
   border-bottom-right-radius: 10px;
