--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -26,11 +26,12 @@ nav.admin{
 }
 
 section.admin{
+  // box-shadow: 0 0 10px rgba(0,0,0,.25);
   position: relative;
   margin: 0 auto 1em;
   padding: .5em;
   border-radius: 10px;
-  background: #eee;
+  background: #ddd;
   h1{
     margin: -.5em;
     margin-bottom: .5em;
