--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -44,16 +44,17 @@ section.admin{
     font-size: 1em;
     width: 100%;
     background-color: #ddd;
-    border: 4px lighten($admin, 30%) solid;
+    // border: 4px lighten($admin, 30%) solid;
     margin-bottom: 1.5em;
     thead{
-      border-bottom: 2px darken($admin, 10) solid;
+      border-bottom: 2px #ccc solid;
+
     }
     th, td{
       padding: .125em .25em;
     }
     th{
-      background-color: #ccc;
+      font-size: 1em;
       color: #000;;
       text-align: left;
     }
@@ -77,7 +78,7 @@ section.admin{
         }
       }
       img{
-        box-shadow: 0 0 10px rgba(0,0,0,.5);
+        box-shadow: 0 0 5px rgba(0,0,0,.25);
         border: 4px #eee solid;
       }
       &.actions{
