--- a/app/views/artworks/crop.html.haml
+++ b/app/views/artworks/crop.html.haml
@@ -1,5 +1,5 @@
 %section.admin
-  %h1 create thumbnail
+  %h1 Create Thumbnail
 
   .crop-holder
     = image_tag @artwork.image_url(:large), id: "cropbox"
