--- a/app/assets/stylesheets/slimbox2.css.scss
+++ b/app/assets/stylesheets/slimbox2.css.scss
@@ -59,7 +59,7 @@
 	color: #fff;
 	line-height: 1.4em;
 	text-align: center;
-	border: 10px solid 000;
+	border: 10px solid #000;
 	margin-bottom: 10px;
 	border-top-style: none;
 }
