--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title DEPS
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = javascript_include_tag "application", "data-turbolinks-track" => false
     = csrf_meta_tags
     %link{ href: 'https://fonts.googleapis.com/css?family=Oxygen:400,700,300', rel: 'stylesheet', type: 'text/css' }
 
