--- a/app/views/artworks/index.html.haml
+++ b/app/views/artworks/index.html.haml
@@ -19,9 +19,9 @@
         %th Medium
         %th Dimensions
         %th
-    %tbody.sorts{ data: { update_url: 'sort_categories_url' } }
+    %tbody.sorts{ data: { update_url: sort_artworks_url } }
       - @artworks.each do |artwork|
-        %tr
+        = content_tag_for :tr, artwork do
           %td= image_tag artwork.image_url(:icon).to_s
           %td
             = raw "<span class='sold'>&bull;</span>" if artwork.sold
