--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -12,7 +12,7 @@
         %th
     %tbody.sorts{ data: { update_url: sort_categories_url } }
       - @categories.each do |category|
-        %tr
+        = content_tag_for :tr, category do
           %td= category.name
           %td= category.hidden
           %td.actions
