--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -29,11 +29,15 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
         display: inline-block;
           margin-right: .5em;
         a{
-          color: #777;
+          color: #999;
           text-decoration: none;
           transition: color .25s ease-out;
           &:hover{
             color: #000;
+          }
+          &.current{
+            color: #000;
+            font-weight: 400;
           }
         }
       }
