--- a/app/views/artworks/index.html.haml
+++ b/app/views/artworks/index.html.haml
@@ -15,9 +15,9 @@
         %th
         %th Title
         %th Category
-        %th Year
-        %th Medium
-        %th Dimensions
+        %th.year Year
+        %th.medium Medium
+        %th.dimensions Dimensions
         %th
     %tbody.sorts{ data: { update_url: sort_artworks_url } }
       - @artworks.each do |artwork|
@@ -27,9 +27,9 @@
             = raw "<span class='sold'>&bull;</span>" if artwork.sold
             = link_to artwork.title, artwork
           %td= artwork.category.name
-          %td= artwork.year
-          %td= artwork.medium
-          %td= artwork.width.to_s + " x " +artwork.length.to_s
+          %td.year= artwork.year
+          %td.medium= artwork.medium
+          %td.dimensions= artwork.width.to_s + " x " +artwork.length.to_s
           %td.actions
             = link_to 'Show', artwork
             = link_to 'Edit', edit_artwork_path(artwork)
