--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,9 +12,9 @@
       %h1 Deps
       %nav.pinned
         %ul
-          %li= link_to 'blog', blogs_path
+          %li= link_to 'blog', blogs_path, class: cp(blogs_path)
           = render '/categories/listcats'
-          %li= link_to 'contact', contact_path
+          %li= link_to 'contact', contact_path, class: cp(contact_path)
     #main-content
       = yield
 
