--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -11,7 +11,7 @@ body{ background: url('https://s3.amazonaws.com/deps1/static/wood_bg.jpg'); }
     margin: 0;
     padding: 0;
     height: 73px;
-    background: url('https://s3.amazonaws.com/deps1/static/banner.jpg') 40em 0;
+    background: url('https://s3.amazonaws.com/deps1/static/banner.jpg');
     text-indent: -9999px;
     box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,.75),
                       0px 0px  2px 0px rgba(0,0,0,.5);
