--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
         - if session[:user_id]
           %li= link_to 'New Blog', new_blog_path
           %li= link_to 'Categories', categories_path
-          %li= link_to 'Artwork', artworks_path
+          %li= link_to 'Artwork', artworks_path(category_id: @categories.first.id)
           %li= link_to 'Logout', logout_path, method: :delete 
 
   :javascript
